# Friday

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  firestore.rules  pyproject.toml  requirements-dashboard.txt  requirements-perception.txt  requirements-voice.txt
.github/workflows/: ci.yml
android-tv/: .gitignore  README.md  settings.gradle.kts
android-tv/app/: build.gradle.kts
dashboard/: README.md  app.py
examples/plugins/: README.md  hello_plugin.py
models/emotion/: emotion_head.onnx
models/wakeword/: hey_friday.onnx
notebooks/: train_hey_friday_wakeword.ipynb
scripts/: ig_login.py
src/friday/: app.py  cli.py  config.py  errors.py  logging.py  notify.py
src/friday/agents/: alerting.py  analysis.py  automation.py  base.py  device.py  knowledge.py
src/friday/api/: middleware.py  routes_admin.py  routes_approvals.py  routes_automation.py  routes_briefing.py  routes_calendar.py  routes_chat.py  routes_circle.py  routes_comms.py  routes_email.py  routes_emotion.py  routes_ensemble.py  routes_export.py  routes_family.py  routes_flows.py  routes_graph.py  routes_health.py  routes_hud.py  routes_journal.py  routes_maps.py  routes_market.py  routes_meetings.py  routes_memory.py  routes_models.py  routes_multimodal.py  routes_n8n.py  routes_perception.py  routes_planner.py  routes_plugins.py  routes_presence.py  routes_protocols.py  routes_pwa.py  routes_rag.py  routes_reminders.py  routes_roster.py  routes_schedules.py  routes_security.py  routes_sentiment.py  routes_siri.py  routes_studio.py  (+5 more)
src/friday/briefing/: __init__.py  service.py
src/friday/broker/: __init__.py  audit.py  broker.py
src/friday/browser_ext/: README.md  manifest.json  popup.html  popup.js
src/friday/circle/: __init__.py  auth.py  care.py  chat.py  firebase.py  firestore_rest.py  firestore_store.py  friend_time.py  fun.py  intents.py  messages.py  models.py  service.py  siri_circle.py  status.py  store.py
src/friday/core/: blackboard.py  confidence.py  critic.py  ensemble.py  graph.py  modes.py  orchestrator.py  planner.py  router.py  security.py  state.py
src/friday/desktop/: __init__.py  control.py  tray.py
src/friday/eval/: __init__.py  harness.py
src/friday/family/: __init__.py  service.py  store.py
src/friday/flows/: __init__.py  engine.py  models.py  replan.py  simulate.py  store.py  templates.py
src/friday/graph/: __init__.py  extractor.py  store.py
src/friday/hud/: __init__.py
src/friday/instagram/: __init__.py  client.py  intents.py  models.py  service.py  session.py  siri_instagram.py
src/friday/integrations/: __init__.py  calendar.py  comms.py  email.py
src/friday/journal/: __init__.py  service.py  store.py
src/friday/maps/: __init__.py  distance.py  nearby.py
src/friday/market/: __init__.py  dhan.py
src/friday/meetings/: __init__.py  capture.py  store.py
src/friday/memory/: autotag.py  categories.py  citations.py  compaction.py  contradiction.py  export.py  long_term.py  pg.py  rrf.py  short_term.py  vector.py
src/friday/models/: __init__.py  budget.py  catalog.py  gateway.py  personas.py
src/friday/multimodal/: __init__.py  imagegen.py  pdf_layout.py
src/friday/n8n/: __init__.py  client.py  drafter.py  service.py
src/friday/nlp/: __init__.py  sentiment.py
tests/: conftest.py
tests/integration/: test_admin_api.py  test_agent_reach_wiring.py  test_agents_e2e.py  test_approvals_api.py  test_auth.py  test_automation_api.py  test_briefing_api.py  test_budget_api.py  test_calendar_api.py  test_chat_loop.py  test_circle_api.py  test_circle_chat_api.py  test_comms_api.py  test_confidence_api.py  test_custom_operators_api.py  test_email_api.py  test_emotion_enroll.py  test_ensemble_api.py  test_export_api.py  test_family_api.py  test_fanout_wiring.py  test_finish_wiring.py  test_flows_api.py  test_flows_steering_api.py  test_graph_api.py  test_hud_api.py  test_ideabatch_tools.py  test_journal_api.py  test_load_smoke.py  test_maps_api.py  test_market_api.py  test_meetings_api.py  test_memory_api.py  test_memory_e2e.py  test_models_api.py  test_multimodal_api.py  test_n8n_api.py  test_orchestrator_emotion.py  test_perception_api.py  test_planner_api.py  (+28 more)
tests/unit/: test_agent_reach_tool.py  test_alerting_agent.py  test_analysis_agent.py  test_anchor.py  test_anomaly.py  test_approvals.py  test_architecture.py  test_ask_user_tool.py  test_audit_metrics.py  test_automation_agent.py  test_autotag.py  test_backup.py  test_blackboard.py  test_boot.py  test_briefing.py  test_broker.py  test_broker_egress.py  test_browser_ext.py  test_browser_tool.py  test_budget.py  test_calendar.py  test_capabilities_tool.py  test_capture.py  test_circle.py  test_circle_auth.py  test_circle_care.py  test_circle_chat.py  test_circle_fun.py  test_circle_intents.py  test_circle_messages.py  test_circle_status.py  test_citations.py  test_cli.py  test_comms.py  test_compaction.py  test_confidence.py  test_config.py  test_confirm_step.py  test_contradiction.py  test_critic.py  (+129 more)
web/: api.js  app.js  circle.js  crypto.js  firebase-config.example.js  firebase-config.js  firestore-circle.js  friday.shortcut  index.html  join.html  join.js  presence.js
(+140 files in other folders)
