[project]
name = "friday"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "langgraph>=0.2.40",
  "httpx>=0.27",
  "openai>=1.50",
  "python-dotenv>=1.0",
  "psutil>=7.2.2",
]

[project.scripts]
friday = "friday.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.7",
    "respx>=0.21",
    "types-psutil>=7.2.2.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# fastapi.testclient re-exports starlette's TestClient, which warns at import
# time that using httpx with starlette.testclient is deprecated. It is a
# known upstream deprecation we do not control (no httpx2 yet); silence just
# that one message so the suite stays warning-clean. The warning category is
# starlette's StarletteDeprecationWarning, a UserWarning subclass (NOT a
# DeprecationWarning), so the filter matches by message only (default category
# Warning) rather than pinning a class.
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/friday"]
