[project]
name = "friday"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "langgraph>=0.2.40",
  "httpx>=0.27",
  "openai>=1.50",
  "python-dotenv>=1.0",
  "psutil>=7.2.2",
]

[project.scripts]
friday = "friday.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.7",
    "respx>=0.21",
    "types-psutil>=7.2.2.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]
# The optional voice/ML extras (numpy, onnxruntime, openwakeword, …) are installed
# only via the voice/perception requirements, NOT the base/CI environment. So mypy
# must run green WITHOUT them: don't flag per-line import ignores that are only
# "unused" when an extra happens to be present locally (they ARE used in CI).
warn_unused_ignores = false

# Treat the optional, often-unstubbed ML/voice third-party deps as missing-OK so
# their imports don't error in the base/CI env (and import-untyped doesn't fire
# locally when they're installed without stubs).
[[tool.mypy.overrides]]
module = [
  "numpy", "numpy.*",
  "onnxruntime", "onnxruntime.*",
  "openwakeword", "openwakeword.*",
  "pvporcupine", "pvporcupine.*",
  "resemblyzer", "resemblyzer.*",
  "sounddevice", "sounddevice.*",
  "faster_whisper", "faster_whisper.*",
  "firebase_admin", "firebase_admin.*",
  "instagrapi", "instagrapi.*",
]
ignore_missing_imports = true

# The emotion model code is numpy/onnxruntime-heavy; without the extras present its
# array helpers read as untyped. Relax the two strict "untyped" checks for just
# this module so the (optional, model-backed) code doesn't fail the gate in CI.
[[tool.mypy.overrides]]
module = ["friday.providers.emotion"]
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# fastapi.testclient re-exports starlette's TestClient, which warns at import
# time that using httpx with starlette.testclient is deprecated. It is a
# known upstream deprecation we do not control (no httpx2 yet); silence just
# that one message so the suite stays warning-clean. The warning category is
# starlette's StarletteDeprecationWarning, a UserWarning subclass (NOT a
# DeprecationWarning), so the filter matches by message only (default category
# Warning) rather than pinning a class.
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/friday"]
